[project]
name = "neuro-forge"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "CeCILL-B"}
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
]
dependencies = ["fire", "pyaml", "toml"]

[project.urls]
repository = "https://github.com/neurospin/neuro-forge"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["soma-forge/python"]
include = ["soma_forge"]

[project.scripts]
soma-forge = "soma_forge:main"

[tool.setuptools]
include-package-data = true
script-files=["neuro-forge"]